--- a/style.css
+++ b/style.css
@@ -33,3 +33,8 @@ a {
     justify-content: space-between;
     align-items: center;
 }
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
