--- a/style.css
+++ b/style.css
@@ -42,3 +42,34 @@ a {
 }
 
 /* -- HERO -- */
+
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 20%;
+    gap: 50px;
+}
+
+.hero-left {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.hero-right {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-img {
+    width: 100%;
+    max-width: 450px;
+    height: 450px;
+    border-radius: 20px;
+}
+
