--- a/style.css
+++ b/style.css
@@ -84,6 +84,16 @@ a {
     color: #a9a9a9;
     font-size: 18px;
     margin-top: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     max-width: 900px;
+}
+
+.hero-btn {
+    background-color: #3882F6;
+    padding: 10px 40px;
+    color: #E5E7EB;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
 }
