--- a/style.css
+++ b/style.css
@@ -104,3 +104,11 @@ a {
     padding: 100px 20%;
     text-align: center;
 }
+
+.info-title {
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900px;
+}
