--- a/style.css
+++ b/style.css
@@ -121,3 +121,22 @@ a {
     gap: 50px;
 }
 
+.box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 200px;
+    height: 200px;
+
+    border: 4px solid #3882F6;
+    border-radius: 20px;
+}
+
+.card {
+    max-width: 190px;
+}
+
+.text {
+    font-size: 18px;
+}
