--- a/style.css
+++ b/style.css
@@ -17,7 +17,13 @@ a {
     text-decoration: none;
     color: #a9a9a9;
     font-size: 18px;
+    transition-duration: 0.5s;
 }
+
+a:hover {
+    color: #F9FAF8;
+    transition: 0.5s;
+} 
 
 /* -- HEADER -- */
 
