--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ a:hover {
 .hero-title {
     font-size: 48px;
     color: #F9FAF8;
-    font-weight: 900px;
+    font-weight: 900;
     margin-bottom: 0;
 }
 
@@ -91,7 +91,7 @@ a:hover {
     font-size: 18px;
     margin-top: 5px;
     margin-bottom: 10px;
-    max-width: 900px;
+    max-width: 900pч;
 }
 
 .hero-btn {
@@ -117,7 +117,7 @@ a:hover {
     justify-content: center;
     font-size: 36px;
     color: #1F2937;
-    font-weight: 900px;
+    font-weight: 900;
 }
 
 .wrapper-container {
