--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ a:hover {
     padding: 50px 10%;
 
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -163,6 +163,7 @@ a:hover {
     font-weight: 300;
     font-style: italic;
     color: #1F2937;
+    margin-bottom: 5px;
 }
 
 .author {
@@ -170,7 +171,7 @@ a:hover {
     font-weight: bold;
     text-align: right;
     font-size: 20px;
-    margin: 20px 10px;
+    margin-top: 5px;
 }
 
 /* -- SIGN UP CONTAINER -- */
